--- a/settings.yml
+++ b/settings.yml
@@ -4,12 +4,12 @@ quick_quote_post_location_threshold:
   description:
     en: "Number of posts back before fast quote enabled."
     zh_CN: "距离最新帖子多少层以内时，快速引用功能将被禁用（设为 0 表示始终启用）。"
-quick_quote_remove_links:
+quick_quote_save_link_text:
   type: bool
   default: true
   description:
-    en: "Remove all links (inc. pictures) from quotes"
-    zh_CN: "从引用内容中移除所有链接（包括图片）"
+    en: "Keep link text. If disabled, the link will be completely removed."
+    zh_CN: "保留链接文字。若禁用，链接将完全移除"
 quick_quote_remove_contiguous_new_lines:
   type: bool
   default: true
